# thrust-c-wrapper

./: .gitignore  CMakeLists.txt  README.md  ak.jl  bench.jl  makefile  test.jl
benchmark/: CMakeLists.txt  bench.cu
src/: common.cuh  merging.cu  reductions.cu  sorting.cu
